Updates from Overleaf

--- a/report/main.tex
+++ b/report/main.tex
@@ -487,6 +487,7 @@ The following lemma proves that this solution satisfies the boundary conditions.
     \end{equation*}
     which proves that $u(S,t)$ satisfies the boundary conditions.
 \end{proof}
+\Cref{fig:plot_cos} plots the function $u(S,t)$ as a function of $S$ for some value of $t \in [0,1]$.
 
 \begin{figure}[!ht]
     \centering
@@ -494,6 +495,14 @@ The following lemma proves that this solution satisfies the boundary conditions.
     \caption{.}
     \label{fig:plot_cos}
 \end{figure}
+
+\begin{figure}[!ht]
+    \centering
+    \includegraphics[width=0.75\linewidth]{code/images/true_constructed_cos.png}
+    \caption{.}
+    \label{fig:plot_cos}
+\end{figure}
+
 
 
 
