Updates from Overleaf

--- a/report/main.tex
+++ b/report/main.tex
@@ -498,9 +498,23 @@ The following lemma proves that this solution satisfies the boundary conditions.
 
 \begin{figure}[!ht]
     \centering
-    \includegraphics[width=0.75\linewidth]{code/images/true_constructed_cos.png}
+    \includegraphics[width=\linewidth]{code/images/fem_vs_analytical_BlackScholesConstructedCos.png}
     \caption{.}
-    \label{fig:plot_cos}
+    \label{fig:fem_vs_true}
+\end{figure}
+
+\begin{figure}[!ht]
+    \centering
+    \includegraphics[width=\linewidth]{code/images/error_vs_time_BlackScholesConstructedCos.png}
+    \caption{.}
+    \label{fig:error_vs_time}
+\end{figure}
+
+\begin{figure}[!ht]
+    \centering
+    \includegraphics[width=\linewidth]{code/images/error_vs_time_BlackScholesConstructedCos.png}
+    \caption{.}
+    \label{fig:error_vs_time}
 \end{figure}
 
 
